Badr: (Font family & headings tools) & (Color tools (text & highlight)) & (Link and image tools) & (Align and list tools)
After you pull please run these commands :

npm install @tiptap/extension-text-style@2.10.2 @tiptap/extension-font-family@2.10.2 -- legacy-peer-deps

npm i @tiptap/extension-heading@2.10.2 -- legacy-peer-deps

npm install react-color@2.19.3 -- legacy-peer-deps

npm install @tiptap/extension-highlight@2.10.2 -- legacy-peer-deps

npm install @tiptap/extension-color@2.10.2 -- legacy-peer-deps

npm install –save-dev @types/react-color@3.0.12 -- legacy-peer-deps

npm install @tiptap/extension-link@2.10.2 -- legacy-peer-deps

npm install @tiptap/extension-text-align@2.10.2 -- legacy-peer-deps

--- a/wordbuds/src/app/globals.css
+++ b/wordbuds/src/app/globals.css
@@ -89,6 +89,16 @@ body {
 
 .tiptap{
 
+.ProseMirror a {
+  @apply text-blue-600;
+  cursor: pointer;
+}
+
+.ProseMirror a:hover {
+  @apply underline;
+}
+
+  }
 
 img {
     display: block;
@@ -248,4 +258,3 @@ img {
       margin: 0;
     }
   }
-}
